--- a/signin.html
+++ b/signin.html
@@ -48,6 +48,11 @@ background-size: cover;">
         <div class="container-fluid">
             <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh;">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
+                    <div class="js-alt" role="alert">
+                        <!-- <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> -->
+                        <strong class= "aaa"></strong> <p class="altt"> </p> 
+                    </div>
+                </div>
                     <div class="bg-gradient rounded p-4 p-sm-5 my-4 mx-3">
                         <form action="" method="post">
                         <div class="d-flex align-items-center justify-content-between mb-3">
@@ -71,7 +76,7 @@ background-size: cover;">
                                 <label class="form-check-label text-secondary" for="exampleCheck1">Remember me</label>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-secondary py-3 w-100 mb-4">Sign In</button>
+                        <button type="submit" class="btn btn-secondary py-3 w-100 mb-4" id="signin">Sign In</button>
                     </form>
                     </div>
                 </div>
@@ -93,7 +98,7 @@ background-size: cover;">
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-    <script src="js/signin.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
